修复：修复内置表格图表在设置固定列时未正确计算高度的BUG；
修复：修复数据管理列表页面条件查询框误将标识符引用符号按照HTML转义的BUG；
改进：内置表格图表支持配置列宽、是否可排序等列特性；


-----------------------------------------
--v2.2.0
-----------------------------------------

新增：内置图表新增水球图；
新增：看板编辑页面新增搜索功能；
新增：图表/看板展示页面新增数据透视表功能，并扩展"dg-chart-disable-setting"属性功能控制是否开启；
新增：看板支持添加"dg-chart-update-group"属性，用于设置图表更新数据分组，避免加载数据耗时的图表影响其他图表；
新增：内置图表支持添加processRenderOptions、processUpdateOptions配置项，用于扩展图表的渲染、更新配置项；
新增：看板表单新增render配置项，用于支持在表单渲染完成后执行回调操作；
修复：修复SQL数据集未正确关闭数据库连接导致相关功能可能出现无法响应的BUG；
修复：修复表格图表自定义样式可能会影响其他表格图表的BUG；
改进：表格图表在开启排序选项后在表头显示排序图标；
改进：自定义图表在展示时默认渲染为表格图表，便于浏览和调试数据；
改进：看板导入功能页面添加导入注意事项说明；
改进：调整图表/看板展示页面参数设置面板尺寸，使其更匹配窗口尺寸；
改进：看板展示页面chartFactory.chartForm重构为chartFactory.chartSetting；
改进：整理管理员系统设置菜单，移除部分非必须菜单项；
改进：调整系统浅色主题为更柔和的配色；


-----------------------------------------
--v2.3.0
-----------------------------------------

新增：新增看板全局资源管理和引用功能；
新增：看板编辑页面新增浏览资源功能；
新增：图表编辑页面新增附件数据集功能，可为基于数据扩展图表功能提供支持；
修复：修复看板展示时无法加载中文名资源的BUG；
修复：修复当看板首页在嵌套路径内时，展示首页未正确跳转至嵌套路径的BUG；
修复：修复SQL数据集对于MySQL的GROUP_CONCAT函数结果集列有时未正确解析的BUG；
修复：修复数据管理编辑页面选择导入键操作有时会出现未填充值的BUG；
修复：修复未禁用数据分析员角色分享数据集功能的BUG；
改进：看板导入操作允许上传内部有多余嵌套目录的ZIP压缩包；
改进：删除已被外键引用的记录时给出友好的错误提示；
改进：简化主页系统菜单标签；
改进：驱动程序导入页面添加驱动库上传注意事项；
改进：改进系统多数据库部署支持，无需修改源代码即可运行于已初始化的主流数据库；


-----------------------------------------
--v2.4.0
-----------------------------------------

新增：看板JS对象新增loadUnsolvedCharts函数，用于异步加载所有未渲染的图表；
新增：看板JS对象新增loadCharts函数，用于异步加载多个图表；
新增：看板JS对象新增chartIndex函数，替换已弃用的getChartIndex函数；
新增：看板JS对象新增chartOf函数、替换已弃用的getChart函数；
新增：看板JS对象新增renderedChart函数，用于获取HTML元素已渲染的图表对象；
新增：图表JS对象新增elementWidgetId、chartWidgetId、isInstance函数；
修复：修复看板嵌套首页自动跳转参数丢失的BUG；
修复：修复processUpdateOptions可能引起图表事件原始数据不对应的BUG；
修复：修复柱状图当名称列是数值类型时无法显示的BUG；
改进：看板JS对象loadChart函数支持不设置chartWidgetId参数而默认从元素的dg-chart-widget属性读取；
改进：看板JS对象异步加载图表在未找到对应图表时返回备用的图表对象；
改进：看板JS对象refreshData、removeChart等函数的chartInfo参数支持传入Jquery对象和HTML元素；
改进：看板内置地图添加默认编码映射；
改进：数据集编辑页面支持调整参数和属性顺序，支持为属性设置默认值；
改进：数据集保存操作在有重名参数或属性时给出友好错误提示；
改进：更新内置数据库JDBC驱动为较新版本；